# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
2024/: CMakeLists.txt  aoc.h  aoc_2024.h
2024/day01/: CMakeLists.txt  Makefile  day01.c
2024/day02/: Makefile  day02.c
2024/day03/: CMakeLists.txt  Makefile  day03.c
2025/: CMakeLists.txt  aoc.h
2025/day01/: Makefile  day01.c
template/: CMakeLists.txt  aoc.h  aoc_20YY.h
template/dayXX/: Makefile  dayXX.c
